<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddShowActivity">


    <!-- Textview part -->


    <!-- Edit text part -->
    <TextView
        android:id="@+id/add_show_title_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_show_tv_id"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/add_show_name_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:text="@string/name_tv_id"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_show_seasons_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/show_seasons_tv_id"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_show_name_tv_id" />

    <TextView
        android:id="@+id/show_characters_tv_id"
        android:layout_width="103dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/show_characters_tv_id"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_show_seasons_tv_id" />

    <EditText
        android:id="@+id/add_show_name_et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/show_name_et_id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Button part -->
    <EditText
        android:id="@+id/add_show_seasons_et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/_8"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_show_name_et_id" />

    <Spinner
        android:id="@+id/add_show_character_sp_id"
        android:layout_width="212dp"
        android:layout_height="43dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_show_seasons_et_id" />

    <Button
        android:id="@+id/add_show_save_btn_id"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:onClick="save"
        android:text="@string/save_btn_id"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_show_cancel_btn_id"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_characters_tv_id"
        app:layout_constraintVertical_bias="0.308" />

    <Button
        android:id="@+id/add_show_cancel_btn_id"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:onClick="cancel"
        android:text="@string/cancel_btn_id"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_show_character_sp_id"
        app:layout_constraintVertical_bias="0.295" />


</androidx.constraintlayout.widget.ConstraintLayout>